<resources>
    <string name="app_name">Mealer24</string>
    <string name="title_activity_view_liste_of_plaintes">activity_view_liste_of_plaintes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_id">order id</string>
    <string name="status">status</string>
    <string name="meal_name">meal name</string>
    <string name="cook_name">cook name</string>
    <string name="order">Order: </string>
    <string name="meal">Meal: </string>
    <string name="cook">Cook: </string>
    <string name="client">Client: </string>
    <string name="client_name">client name</string>
</resources>